# Vancplusplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VARIABLES.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
src/: main.cpp
src/tui/: app.cpp  app.hpp
src/vanbot/: bot.cpp  bot.hpp  coins.hpp  common.hpp  config.hpp  cooling.hpp  fun_plugins.hpp  http_client.cpp  http_client.hpp  lexicon_engine.cpp  lexicon_engine.hpp  onebot_adapter.cpp  onebot_adapter.hpp  storage.cpp  storage.hpp  variable_engine.cpp  variable_engine.hpp  web_api.hpp
